--- a/assets/css/less/fontello.less
+++ b/assets/css/less/fontello.less
@@ -29,30 +29,30 @@
   /* font-size: 120%; */
 }
  
-.icon-home:before { content: '\e81a'; } /* '' */
-.icon-note:before { content: '\e804'; } /* '' */
-.icon-note-beamed:before { content: '\e805'; } /* '' */
-.icon-mail:before { content: '\e814'; } /* '' */
-.icon-link-1:before { content: '\e812'; } /* '' */
-.icon-help-circled:before { content: '\e80f'; } /* '' */
-.icon-info-circled:before { content: '\e80e'; } /* '' */
-.icon-code:before { content: '\e815'; } /* '' */
-.icon-location:before { content: '\e819'; } /* '' */
-.icon-article:before { content: '\e818'; } /* '' */
-.icon-facebook:before { content: '\e807'; } /* '' */
-.icon-beaker:before { content: '\e80c'; } /* '' */
-.icon-gplus-squared:before { content: '\e80b'; } /* '' */
-.icon-doc-text:before { content: '\e817'; } /* '' */
-.icon-code-1:before { content: '\e816'; } /* '' */
-.icon-angle-circled-left:before { content: '\e801'; } /* '' */
-.icon-angle-circled-right:before { content: '\e800'; } /* '' */
-.icon-angle-circled-up:before { content: '\e803'; } /* '' */
-.icon-angle-circled-down:before { content: '\e802'; } /* '' */
-.icon-link-ext-alt:before { content: '\e811'; } /* '' */
-.icon-github-squared:before { content: '\e80a'; } /* '' */
-.icon-facebook-squared:before { content: '\e808'; } /* '' */
-.icon-linkedin-squared:before { content: '\e809'; } /* '' */
-.icon-picture:before { content: '\e806'; } /* '' */
-.icon-book-open:before { content: '\e80d'; } /* '' */
-.icon-link:before { content: '\e810'; } /* '' */
-.icon-link-2:before { content: '\e813'; } /* '' */
+.icon-home:before { content: '\e81a'; }
+.icon-note:before { content: '\e804'; }
+.icon-note-beamed:before { content: '\e805'; }
+.icon-mail:before { content: '\e814'; }
+.icon-link-1:before { content: '\e812'; }
+.icon-help-circled:before { content: '\e80f'; }
+.icon-info-circled:before { content: '\e80e'; }
+.icon-code:before { content: '\e815'; }
+.icon-location:before { content: '\e819'; }
+.icon-article:before { content: '\e818'; }
+.icon-facebook:before { content: '\e807'; }
+.icon-beaker:before { content: '\e80c'; }
+.icon-gplus-squared:before { content: '\e80b'; }
+.icon-doc-text:before { content: '\e817'; }
+.icon-code-1:before { content: '\e816'; }
+.icon-angle-circled-left:before { content: '\e801'; }
+.icon-angle-circled-right:before { content: '\e800'; }
+.icon-angle-circled-up:before { content: '\e803'; }
+.icon-angle-circled-down:before { content: '\e802'; }
+.icon-link-ext-alt:before { content: '\e811'; }
+.icon-github-squared:before { content: '\e80a'; }
+.icon-facebook-squared:before { content: '\e808'; }
+.icon-linkedin-squared:before { content: '\e809'; }
+.icon-picture:before { content: '\e806'; }
+.icon-book-open:before { content: '\e80d'; }
+.icon-link:before { content: '\e810'; }
+.icon-link-2:before { content: '\e813'; }
