--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -55,7 +55,7 @@ header {
 }
 
 nav {
-	overflow: hidden;
+	//overflow: hidden;
 	margin: 0 auto;
 	display: block;
 	position: absolute;
@@ -78,17 +78,50 @@ nav {
 		border-radius: 5px;
 		position: relative;
 		display:inline-block;
-
 		padding: 1px 5px;
 		transition: background-color .2s, background-position .3s;
+		
+		overflow: visible;
 		&:hover {
 			color: white;
 			text-decoration: none;
 			background-color: #3c057b;
 			background-position: left center;
 			transition: background-color .6s, background-position .3s;
+
+			p {
+				display: block;
+				bottom: -51px;
+				opacity: 1;
+				transition: all 0.6s;
+			}
 		}
 		i {}
+		p {	
+			position: absolute;
+			text-align: center;
+			background-color: rgba(11, 19, 121, 0.75);
+			bottom: -66px;
+			left:00px;
+			font: 18px "Raleway";
+			opacity: 0;
+			font-weight: 700;
+			padding: 5px 10px;
+			border-radius: 0 5px 5px 5px;
+			display: none;
+			transition: all 0.5s;
+			box-shadow: 0 2px 1px rgba(0,0,0, .2);
+
+			&:before {
+				content: "";
+				position: absolute;
+				top: -10px;
+				left: 0px;
+				border-left: 15px solid transparent;
+				border-right: 15px solid transparent;
+				border-bottom: 10px solid rgba(11, 19, 121, 0.75);
+			}
+		}
 	}
 }
 
@@ -104,7 +137,7 @@ nav {
 	width: 275px;
 	height: 200px;
 	border-radius: 7px;
-	
+
 	/* below seems to fix a strange rendering bug in Chrome with 
 	background clipping on elements with a border radius */
 	border: 1px solid transparent; 
@@ -220,6 +253,7 @@ nav {
 			margin-bottom: 14px;
 			padding: 0 0 0 25px;
 			text-align: left; 
+			overflow: hidden;
 			i {
 				position: absolute;
 				right: -50px;
