--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,7 +158,6 @@ header h1 {
   text-shadow: 0 0 10px #071158;
 }
 nav {
-  overflow: hidden;
   margin: 0 auto;
   display: block;
   position: absolute;
@@ -171,7 +170,6 @@ nav ul {
   margin: 0;
 }
 nav a {
-  overflow: visible;
   font: 30px/1.75em 'Raleway', sans-serif;
   font-weight: 900;
   text-transform: uppercase;
@@ -184,6 +182,7 @@ nav a {
   display: inline-block;
   padding: 1px 5px;
   transition: background-color 0.2s, background-position 0.3s;
+  overflow: visible;
 }
 nav a:hover {
   color: white;
@@ -191,6 +190,36 @@ nav a:hover {
   background-color: #3c057b;
   background-position: left center;
   transition: background-color 0.6s, background-position 0.3s;
+}
+nav a:hover p {
+  display: block;
+  bottom: -51px;
+  opacity: 1;
+  transition: all 0.6s;
+}
+nav a p {
+  position: absolute;
+  text-align: center;
+  background-color: rgba(11, 19, 121, 0.75);
+  bottom: -66px;
+  left: 00px;
+  font: 18px "Raleway";
+  opacity: 0;
+  font-weight: 700;
+  padding: 5px 10px;
+  border-radius: 0 5px 5px 5px;
+  display: none;
+  transition: all 0.5s;
+  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+nav a p:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 0px;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-bottom: 10px solid rgba(11, 19, 121, 0.75);
 }
 .wrap {
   position: relative;
@@ -338,6 +367,7 @@ nav a:hover {
   margin-bottom: 14px;
   padding: 0 0 0 25px;
   text-align: left;
+  overflow: hidden;
 }
 .home nav a i {
   position: absolute;
