added close icon and styles for portfolio page

--- a/assets/css/less/fontello.less
+++ b/assets/css/less/fontello.less
@@ -33,6 +33,7 @@
 .icon-note:before { content: '\e804'; }
 .icon-note-beamed:before { content: '\e805'; }
 .icon-mail:before { content: '\e814'; }
+.icon-cancel:before { content: '\e81b'; }
 .icon-link-1:before { content: '\e812'; }
 .icon-help-circled:before { content: '\e80f'; }
 .icon-info-circled:before { content: '\e80e'; }
