--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -4,16 +4,19 @@
  * Version: 0.1
  * Note: Compiles from LESS
  *============================= */
-
-
 @import url(http://fonts.googleapis.com/css?family=Pacifico|Raleway:900,500);
-/* Fontello */
+
+/* apply a natural box layout model to all elements
+   reco by Paul Irish: http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
 body {
 	background-color: #eaf385;
 	padding: 0;
 	-webkit-font-smoothing: antialiased;
 }
 
+/* Fontello */
 @import "fontello.less";
 
 h1 {
@@ -36,6 +39,8 @@ h2 {
 	border-width: 8px;
 	margin: 0 auto 50px auto; 
 	-webkit-border-image:url("../img/bg-pattern-01.png") 8 0 8 0 repeat;
+
+	border-image:url("../img/bg-pattern-01.png") 8 0 8 0 repeat;
 }
 
 header {
@@ -66,6 +71,7 @@ nav {
 		padding: 0;
 		margin: 0;
 	}
+
 	a {
 		overflow: visible;
 		font: 30px/1.75em 'Raleway', sans-serif;
@@ -75,7 +81,7 @@ nav {
 		color: white;
 		background: #05667b url("../img/bg-diag-right.png") no-repeat;
 		background-position: 400px center;
-		border-radius: 5px;
+		border-radius: 3px;
 		position: relative;
 		display:inline-block;
 		padding: 1px 5px;
@@ -96,7 +102,6 @@ nav {
 				transition: all 0.6s;
 			}
 		}
-		i {}
 		p {	
 			position: absolute;
 			text-align: center;
@@ -107,10 +112,10 @@ nav {
 			opacity: 0;
 			font-weight: 700;
 			padding: 5px 10px;
-			border-radius: 0 5px 5px 5px;
+			border-radius: 0 3px 3px 3px;
 			display: none;
 			transition: all 0.5s;
-			box-shadow: 0 2px 1px rgba(0,0,0, .2);
+			box-shadow: 0 2px 1px rgba(0,0,0, .1);
 
 			&:before {
 				content: "";
@@ -136,7 +141,7 @@ nav {
 .entry {
 	width: 275px;
 	height: 200px;
-	border-radius: 7px;
+	border-radius: 5px;
 
 	/* below seems to fix a strange rendering bug in Chrome with 
 	background clipping on elements with a border radius */
@@ -147,8 +152,10 @@ nav {
 	margin-right: 20px;
 	margin-bottom: 20px;
 	overflow: hidden;
+	box-sizing: padding-box;
 	
 	vertical-align: top;
+	z-index: 3;
 
 	section,
 	a {
@@ -161,19 +168,6 @@ nav {
 		i { font-size:30px; position: absolute; }
 	}
 
-	.info {
-		position: absolute;
-		top: -80px;
-		left: -88px;
-		border-top: 80px solid transparent;
-		border-bottom: 80px solid transparent;
-		border-left: 88px solid rgba(11, 73, 121, 0.8);
-		position: absolute;
-		i {
-			bottom: -40px; left: -84px;
-		}
-	}
-
 	a {
 		position: absolute;
 		bottom: -80px;
@@ -181,23 +175,60 @@ nav {
 		border-top: 80px solid transparent;
 		border-bottom: 80px solid transparent;
 		border-right: 78px solid rgba(11, 19, 121, 0.75);
-		// right: -10px;
-		// bottom : 0px;
-		// display: block;
-		// background-color: rgba(11, 19, 121, 0.75);
-		// height: 50px;
-		// width: 50px;
+		z-index: 2;
 
 		i {
-			// top: 0; left: 0;
 			top: -1.2em; right: -2.5em;
 		}
 	}
+
+	.info-button {
+		position: absolute;
+		top: -80px;
+		left: -88px;
+		border-top: 80px solid transparent;
+		border-bottom: 80px solid transparent;
+		border-left: 88px solid rgba(11, 73, 121, 0.8);
+		position: absolute;
+		z-index: 2;
+
+		i {
+			bottom: -40px; left: -84px;
+		}
+	}
+
+	.info {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: -100%;
+		background-color: rgba(11, 73, 121, 0.8);
+		box-sizing: border-box;
+		border-radius: 4px;
+		padding-top: 80px;
+		padding-left: 12px;
+		padding-right: 20px;
+		z-index: 1;
+
+		h1, h2 {
+			font: 18px 'Raleway', sans-serif;
+			color: white;
+			text-align: left;
+			text-transform: uppercase;
+		}
+		h1 { font-weight: 900; line-height: .8em; }
+		h2 { font-size: 16px; font-weight: 500; }
+
+		&.active {
+			top: 0;
+		}
+	}
+
 	&:nth-child(3n) {
 		margin-right: 0;
 	}
 	&:hover {
-		.info { left: 0; }
+		.info-button { left: 0; }
 		a { 
 			right: 0px;
 			//-webkit-transform: translate(-80px);
