--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -152,10 +152,12 @@ nav {
 	margin-right: 20px;
 	margin-bottom: 20px;
 	overflow: hidden;
-	box-sizing: padding-box;
+	box-sizing: border-box;
 	
 	vertical-align: top;
 	z-index: 3;
+
+	img { min-height: 100%; }
 
 	section,
 	a {
@@ -216,8 +218,8 @@ nav {
 			text-align: left;
 			text-transform: uppercase;
 		}
-		h1 { font-weight: 900; line-height: .8em; }
-		h2 { font-size: 16px; font-weight: 500; }
+		h1 { font-weight: 900; line-height: 1.125em; }
+		h2 { font-size: 16px; font-weight: 500; margin-top: 3px; }
 
 		&.active {
 			top: 0;
