--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -203,7 +203,7 @@ nav {
 		width: 100%;
 		height: 100%;
 		position: absolute;
-		top: -100%;
+		top: 0;
 		background-color: rgba(11, 73, 121, 0.8);
 		box-sizing: border-box;
 		border-radius: 4px;
@@ -222,7 +222,7 @@ nav {
 		h2 { font-size: 16px; font-weight: 500; margin-top: 3px; }
 
 		&.active {
-			top: 0;
+			top: -100%;
 		}
 	}
 
@@ -306,6 +306,15 @@ nav {
 .portfolio {
 	.wrap {
 		max-width: 908px;
+	}
+}
+
+@media (max-width: 987px) {
+	.entry:nth-child(3n),
+	.entry { margin-right: 20px; }
+	
+	.entry:nth-child(2n) {
+		margin-right: 0;
 	}
 }
 
