--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -304,7 +304,7 @@ nav a p:before {
   width: 100%;
   height: 100%;
   position: absolute;
-  top: -100%;
+  top: 0;
   background-color: rgba(11, 73, 121, 0.8);
   box-sizing: border-box;
   border-radius: 4px;
@@ -330,7 +330,7 @@ nav a p:before {
   margin-top: 3px;
 }
 .entry .info.active {
-  top: 0;
+  top: -100%;
 }
 .entry:nth-child(3n) {
   margin-right: 0;
@@ -433,6 +433,15 @@ nav a p:before {
 }
 .portfolio .wrap {
   max-width: 908px;
+}
+@media (max-width: 987px) {
+  .entry:nth-child(3n),
+  .entry {
+    margin-right: 20px;
+  }
+  .entry:nth-child(2n) {
+    margin-right: 0;
+  }
 }
 @media (max-width: 480px) {
   h2 {
