converted font sizes to ems for relative sizing; random bg colors on entries

--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -14,13 +14,14 @@ body {
 	background-color: #eaf385;
 	padding: 0;
 	-webkit-font-smoothing: antialiased;
+	font-size: 16px;	
 }
 
 /* Fontello */
 @import "fontello.less";
 
 h1 {
-	font: 60px 'Raleway', sans-serif;
+	font: 3.75em 'Raleway', sans-serif;
 	font-weight: 900;
 	text-align: center;
 	color: white;
@@ -29,7 +30,7 @@ h1 {
 	line-height: 0.95em; }
 
 h2 {
-	font: 48px/1.125em 'Pacifico', cursive;
+	font: 3em/1.125em 'Pacifico', cursive;
 	color: #1e4849;
 	text-align: center;
 	margin-bottom: 25px; }
@@ -74,10 +75,9 @@ nav {
 
 	a {
 		overflow: visible;
-		font: 30px/1.75em 'Raleway', sans-serif;
+		font: 1.875em/1.75em 'Raleway', sans-serif;
 		font-weight: 900;
 		text-transform: uppercase;
-		text-shadow: 2px 2px 1 rgba(0, 0, 0, .5);
 		color: white;
 		background: #05667b url("../img/bg-diag-right.png") no-repeat;
 		background-position: 400px center;
@@ -204,7 +204,7 @@ nav {
 		height: 100%;
 		position: absolute;
 		top: 0;
-		background-color: rgba(11, 73, 121, 0.8);
+
 		box-sizing: border-box;
 		border-radius: 4px;
 		padding-top: 80px;
@@ -213,13 +213,13 @@ nav {
 		z-index: 1;
 
 		h1, h2 {
-			font: 18px 'Raleway', sans-serif;
+			font: 1.125em 'Raleway', sans-serif;
 			color: white;
 			text-align: left;
 			text-transform: uppercase;
 		}
 		h1 { font-weight: 900; line-height: 1.125em; }
-		h2 { font-size: 16px; font-weight: 500; margin-top: 3px; }
+		h2 { font-size: 1em; font-weight: 500; margin-top: 3px; }
 
 		&.active {
 			top: -100%;
@@ -275,7 +275,7 @@ nav {
 		width: 450px; 
 	}
 	h2 { 
-		font-size: 36px; 
+		font-size: 2.25em; 
 	}
 	nav {
 		position: relative;
@@ -309,12 +309,26 @@ nav {
 	}
 }
 
+.color-1 { background-color: rgba(11, 73, 121, 0.8); }
+.color-2 { background-color: rgba(7, 94, 144, 0.9) }
+.color-3 { background-color: rgba(12, 7, 75, 0.8) }
+.color-4 { background-color: rgba(15, 88, 82, 0.8) }
+
 @media (max-width: 987px) {
+	body { font-size: 14px; }
+	h2 {
+		i {
+			display: none;
+		}
+	}
 	.entry:nth-child(3n),
 	.entry { margin-right: 20px; }
 	
 	.entry:nth-child(2n) {
 		margin-right: 0;
+	}
+	.wrap {
+		width: 80%;
 	}
 }
 
