updated fonts with menu icon

--- a/assets/css/less/fontello.less
+++ b/assets/css/less/fontello.less
@@ -42,6 +42,7 @@
 .icon-article:before { content: '\e818'; }
 .icon-facebook:before { content: '\e807'; }
 .icon-beaker:before { content: '\e80c'; }
+.icon-menu:before { content: '\e81c'; }
 .icon-gplus-squared:before { content: '\e80b'; }
 .icon-doc-text:before { content: '\e817'; }
 .icon-code-1:before { content: '\e816'; }
