--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -37,7 +37,7 @@ h2 {
 
 .content {
 	padding: 24px 0;
-	border-width: 8px;
+	border-width: 8px 0;
 	margin: 0 auto 50px auto; 
 	-webkit-border-image:url("../img/bg-pattern-01.png") 8 0 8 0 repeat;
 
@@ -72,7 +72,6 @@ nav {
 		padding: 0;
 		margin: 0;
 	}
-
 	a {
 		overflow: visible;
 		font: 1.875em/1.75em 'Raleway', sans-serif;
@@ -130,6 +129,22 @@ nav {
 	}
 }
 
+.open-menu {
+	display: none;
+	position: absolute;
+	background-color: #05667b;
+	border-radius: 0 0 3px 3px;
+	margin-left: 2%;
+	width: 50px;
+	height: 50px;
+	line-height: 50px;
+	color: white;
+	text-align: center;
+	font-size: 2em;
+	float: left;
+	&:hover { color: white; }
+}
+
 .wrap {
 	position: relative;
 	width: 90%;
@@ -167,7 +182,7 @@ nav {
 		width: 0; 
 		height: 0; 
 
-		i { font-size:30px; position: absolute; }
+		i { position: absolute; }
 	}
 
 	a {
@@ -180,7 +195,7 @@ nav {
 		z-index: 2;
 
 		i {
-			top: -1.2em; right: -2.5em;
+			font-size: 26px; top: -1.5em; right: -2.75em;
 		}
 	}
 
@@ -195,7 +210,7 @@ nav {
 		z-index: 2;
 
 		i {
-			bottom: -40px; left: -84px;
+			font-size:30px; bottom: -40px; left: -84px;
 		}
 	}
 
@@ -321,21 +336,115 @@ nav {
 			display: none;
 		}
 	}
-	.entry:nth-child(3n),
-	.entry { margin-right: 20px; }
 	
-	.entry:nth-child(2n) {
-		margin-right: 0;
-	}
+	.entry { 
+		margin-right: 20px;
+		height: 150px;
+
+		.info { padding-top: 60px; }
+	 	.info-button { display: none; }
+	 	a {	right: 0; }
+		&:nth-child(3n) { margin-right: 20px; }
+		&:nth-child(2n) { margin-right: 0; }
+	 }
+	
+	
 	.wrap {
 		width: 80%;
 	}
 }
 
+@media (max-width: 737px) {
+	body {
+		font-size: 12px;
+	}
+	.entry {
+		width: 45%;
+		height: 100px;
+
+		.info {
+			padding-top: 30px;
+		}
+	}
+}
+
+@media (max-width: 640px) {
+	h1 { font-size: 3.5em; }
+	h2 {
+		font-size: 2.5em;
+		margin-top: .75em;
+		margin-bottom: .75em;
+	}
+	header {
+		margin-bottom: 0;
+		height: 120px;
+	}
+	.wrap {
+		width: 100%;
+	}
+	.entry {
+		width: 95%;
+		height: 72px;
+		margin-right: 0;
+		margin-bottom: 10px;
+		.info {
+			padding-top: 20px;
+		}
+		img {
+			width: 100%;
+		}
+		&:nth-child(3n) { margin-right: 0; }
+	}
+	.content { padding: 1.5em 0; }
+	
+	.open-menu { display: inline-block; }
+	nav.small {
+		position: relative;
+		overflow: hidden;
+		height: 0;
+		-webkit-transition: 1s all;
+		-moz-transition: 1s all;
+		-o-transition: 1s all;
+		transition: 1s all;
+	
+		
+		&.open {
+			height: 200px;
+		}
+		a {
+			width: 100%;
+			height: 50px;
+			border-radius: 0;
+			border-bottom: 1px solid rgba(0,0,0, 0.2);
+			background-image: none;
+			p { 
+				opacity: 1;
+				display: inline-block; 
+				position: relative;
+				bottom: 0;
+				border: none; box-shadow: none; background: none;
+			}
+			p:before {
+				display: none;
+			}
+		}
+	}
+
+	.home {
+		h2 {
+			font-size: 26px;
+		}
+		nav {
+			width: 95%;
+
+			a { height: 40px; margin-bottom: 10px; }
+		}
+	}
+}
+
 @media (max-width: 480px) {
 	h2 {
-		width: 90%;
-		font-size: 24px!important;
+		
 	}
 	nav { width: 100%; }
 	.home {
