--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,6 +87,9 @@ body {
 .icon-beaker:before {
   content: '\e80c';
 }
+.icon-menu:before {
+  content: '\e81c';
+}
 .icon-gplus-squared:before {
   content: '\e80b';
 }
@@ -149,7 +152,7 @@ h2 {
 }
 .content {
   padding: 24px 0;
-  border-width: 8px;
+  border-width: 8px 0;
   margin: 0 auto 50px auto;
   -webkit-border-image: url("../img/bg-pattern-01.png") 8 0 8 0 repeat;
   border-image: url("../img/bg-pattern-01.png") 8 0 8 0 repeat;
@@ -232,6 +235,23 @@ nav a p:before {
   border-right: 15px solid transparent;
   border-bottom: 10px solid rgba(11, 19, 121, 0.75);
 }
+.open-menu {
+  display: none;
+  position: absolute;
+  background-color: #05667b;
+  border-radius: 0 0 3px 3px;
+  margin-left: 2%;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  color: white;
+  text-align: center;
+  font-size: 2em;
+  float: left;
+}
+.open-menu:hover {
+  color: white;
+}
 .wrap {
   position: relative;
   width: 90%;
@@ -271,7 +291,6 @@ nav a p:before {
 }
 .entry section i,
 .entry a i {
-  font-size: 30px;
   position: absolute;
 }
 .entry a {
@@ -284,8 +303,9 @@ nav a p:before {
   z-index: 2;
 }
 .entry a i {
-  top: -1.2em;
-  right: -2.5em;
+  font-size: 26px;
+  top: -1.5em;
+  right: -2.75em;
 }
 .entry .info-button {
   top: -80px;
@@ -297,6 +317,7 @@ nav a p:before {
   z-index: 2;
 }
 .entry .info-button i {
+  font-size: 30px;
   bottom: -40px;
   left: -84px;
 }
@@ -452,8 +473,20 @@ nav a p:before {
   h2 i {
     display: none;
   }
-  .entry:nth-child(3n),
   .entry {
+    margin-right: 20px;
+    height: 150px;
+  }
+  .entry .info {
+    padding-top: 60px;
+  }
+  .entry .info-button {
+    display: none;
+  }
+  .entry a {
+    right: 0;
+  }
+  .entry:nth-child(3n) {
     margin-right: 20px;
   }
   .entry:nth-child(2n) {
@@ -463,11 +496,98 @@ nav a p:before {
     width: 80%;
   }
 }
-@media (max-width: 480px) {
-  h2 {
-    width: 90%;
-    font-size: 24px!important;
+@media (max-width: 737px) {
+  body {
+    font-size: 12px;
   }
+  .entry {
+    width: 45%;
+    height: 100px;
+  }
+  .entry .info {
+    padding-top: 30px;
+  }
+}
+@media (max-width: 640px) {
+  h1 {
+    font-size: 3.5em;
+  }
+  h2 {
+    font-size: 2.5em;
+    margin-top: .75em;
+    margin-bottom: .75em;
+  }
+  header {
+    margin-bottom: 0;
+    height: 120px;
+  }
+  .wrap {
+    width: 100%;
+  }
+  .entry {
+    width: 95%;
+    height: 72px;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+  .entry .info {
+    padding-top: 20px;
+  }
+  .entry img {
+    width: 100%;
+  }
+  .entry:nth-child(3n) {
+    margin-right: 0;
+  }
+  .content {
+    padding: 1.5em 0;
+  }
+  .open-menu {
+    display: inline-block;
+  }
+  nav.small {
+    position: relative;
+    overflow: hidden;
+    height: 0;
+    -webkit-transition: 1s all;
+    -moz-transition: 1s all;
+    -o-transition: 1s all;
+    transition: 1s all;
+  }
+  nav.small.open {
+    height: 200px;
+  }
+  nav.small a {
+    width: 100%;
+    height: 50px;
+    border-radius: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    background-image: none;
+  }
+  nav.small a p {
+    opacity: 1;
+    display: inline-block;
+    position: relative;
+    bottom: 0;
+    border: none;
+    box-shadow: none;
+    background: none;
+  }
+  nav.small a p:before {
+    display: none;
+  }
+  .home h2 {
+    font-size: 26px;
+  }
+  .home nav {
+    width: 95%;
+  }
+  .home nav a {
+    height: 40px;
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 480px) {
   nav {
     width: 100%;
   }
