--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -142,6 +142,7 @@ nav {
 	text-align: center;
 	font-size: 2em;
 	float: left;
+	&.active { background-color: #3c057b; }
 	&:hover { color: white; }
 }
 
@@ -240,7 +241,9 @@ nav {
 			top: -100%;
 		}
 	}
-
+	&:last-child {
+		margin-right: 0;
+	}
 	&:nth-child(3n) {
 		margin-right: 0;
 	}
@@ -409,11 +412,11 @@ nav {
 	
 		
 		&.open {
-			height: 200px;
+			height: 184px;
 		}
 		a {
 			width: 100%;
-			height: 50px;
+			height: 46px;
 			border-radius: 0;
 			border-bottom: 1px solid rgba(0,0,0, 0.2);
 			background-image: none;
