--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -249,6 +249,9 @@ nav a p:before {
   font-size: 2em;
   float: left;
 }
+.open-menu.active {
+  background-color: #3c057b;
+}
 .open-menu:hover {
   color: white;
 }
@@ -351,6 +354,9 @@ nav a p:before {
 }
 .entry .info.active {
   top: -100%;
+}
+.entry:last-child {
+  margin-right: 0;
 }
 .entry:nth-child(3n) {
   margin-right: 0;
@@ -555,11 +561,11 @@ nav a p:before {
     transition: 1s all;
   }
   nav.small.open {
-    height: 200px;
+    height: 184px;
   }
   nav.small a {
     width: 100%;
-    height: 50px;
+    height: 46px;
     border-radius: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     background-image: none;
