set 100% background on smaller media queries

--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -334,6 +334,7 @@ nav {
 
 @media (max-width: 987px) {
 	body { font-size: 14px; }
+	header { background-size: 100% auto; }
 	h2 {
 		i {
 			display: none;
@@ -372,6 +373,7 @@ nav {
 }
 
 @media (max-width: 640px) {
+	header { background-size: 100% 100%; }
 	h1 { font-size: 3.5em; }
 	h2 {
 		font-size: 2.5em;
