reorganized to show by client name then project
removed "role" but perhaps I can use this for sorting tags still

--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -235,7 +235,7 @@ nav {
 			text-transform: uppercase;
 		}
 		h1 { font-weight: 900; line-height: 1.125em; }
-		h2 { font-size: 1em; font-weight: 500; margin-top: 3px; }
+		h2 { font-size: 1em; font-weight: 500; margin-top: 3px; margin-bottom: 3px;}
 
 		&.active {
 			top: -100%;
