--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -142,8 +142,11 @@ nav {
 	text-align: center;
 	font-size: 2em;
 	float: left;
+	
 	&.active { background-color: #3c057b; }
-	&:hover { color: white; }
+	&:hover,
+	&:link,
+	&:visited { color: white; outline: none; }
 }
 
 .wrap {
@@ -407,10 +410,10 @@ nav {
 		position: relative;
 		overflow: hidden;
 		height: 0;
-		-webkit-transition: 1s all;
-		-moz-transition: 1s all;
-		-o-transition: 1s all;
-		transition: 1s all;
+		-webkit-transition: .6s all;
+		-moz-transition: .6s all;
+		-o-transition: .6s all;
+		transition: .6s all;
 	
 		
 		&.open {
