added "experiments" page and styles; json only loads on portfolio page

--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -330,6 +330,22 @@ nav {
 	}
 }
 
+.experiments {
+	background-color: white;
+	header {
+		border-bottom-color: #c0237c;
+	}
+	h1 {
+		font-weight: 900;
+	}
+	h2 {
+		color: #605474;
+		i {
+			color: #c0237c;
+		}
+	}
+}
+
 .color-1 { background-color: rgba(11, 73, 121, 0.8); }
 .color-2 { background-color: rgba(7, 94, 144, 0.9) }
 .color-3 { background-color: rgba(12, 7, 75, 0.8) }
