--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -464,6 +464,21 @@ nav a p:before {
 .portfolio .wrap {
   max-width: 908px;
 }
+.experiments {
+  background-color: white;
+}
+.experiments header {
+  border-bottom-color: #c0237c;
+}
+.experiments h1 {
+  font-weight: 900;
+}
+.experiments h2 {
+  color: #605474;
+}
+.experiments h2 i {
+  color: #c0237c;
+}
 .color-1 {
   background-color: rgba(11, 73, 121, 0.8);
 }
