--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -32,7 +32,9 @@ h2 {
 	font: 3em/1.125em 'Pacifico', cursive;
 	color: #1e4849;
 	text-align: center;
-	margin-bottom: 25px; }
+	margin-bottom: 25px; 
+	margin-top: 0;
+}
 
 .content {
 	padding: 24px 0;
@@ -125,6 +127,9 @@ nav {
 				border-bottom: 10px solid rgba(11, 19, 121, 0.75);
 			}
 		}
+	}
+	&.mobile {
+		display: none;
 	}
 }
 
@@ -395,7 +400,7 @@ nav {
 	h1 { font-size: 3.5em; }
 	h2 {
 		font-size: 2.5em;
-		margin-top: .75em;
+		padding-top: .75em;
 		margin-bottom: .75em;
 	}
 	header {
@@ -404,6 +409,25 @@ nav {
 	}
 	.wrap {
 		width: 100%;
+		background-color: inherit;
+		-webkit-transform: translateY(-184px);
+		-moz-transform: translateY(-184px);
+		-ms-transform: translateY(-184px);
+		-o-transform: translateY(-184px);
+		transform: translateY(-184px);
+		-webkit-transition: 1s all;
+		-moz-transition: 1s all;
+		-ms-transition: 1s all;
+		-o-transition: 1s all;
+		transition: 1s all;
+
+		&.open {
+			-webkit-transform: translateY(0);
+			-moz-transform: translateY(0);
+			-ms-transform: translateY(0);
+			-o-transform: translateY(0);
+			transform: translateY(0);
+		}
 	}
 	.entry {
 		width: 95%;
@@ -421,19 +445,18 @@ nav {
 	.content { padding: 1.5em 0; }
 	
 	.open-menu { display: inline-block; }
-	nav.small {
+	nav { display: none; }
+	nav.mobile {
+		display: block;
 		position: relative;
 		overflow: hidden;
-		height: 0;
-		-webkit-transition: .6s all;
-		-moz-transition: .6s all;
-		-o-transition: .6s all;
-		transition: .6s all;
+		width: 100%;
+		// height: 0;
+
+		top: 0;
+		left: 0;
 	
 		
-		&.open {
-			height: 184px;
-		}
 		a {
 			width: 100%;
 			height: 46px;
