--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -148,6 +148,7 @@ h2 {
   color: #1e4849;
   text-align: center;
   margin-bottom: 25px;
+  margin-top: 0;
 }
 .content {
   padding: 24px 0;
@@ -233,6 +234,9 @@ nav a p:before {
   border-left: 15px solid transparent;
   border-right: 15px solid transparent;
   border-bottom: 10px solid rgba(11, 19, 121, 0.75);
+}
+nav.mobile {
+  display: none;
 }
 .open-menu {
   display: none;
@@ -544,7 +548,7 @@ nav a p:before {
   }
   h2 {
     font-size: 2.5em;
-    margin-top: .75em;
+    padding-top: .75em;
     margin-bottom: .75em;
   }
   header {
@@ -553,6 +557,24 @@ nav a p:before {
   }
   .wrap {
     width: 100%;
+    background-color: inherit;
+    -webkit-transform: translateY(-184px);
+    -moz-transform: translateY(-184px);
+    -ms-transform: translateY(-184px);
+    -o-transform: translateY(-184px);
+    transform: translateY(-184px);
+    -webkit-transition: 1s all;
+    -moz-transition: 1s all;
+    -ms-transition: 1s all;
+    -o-transition: 1s all;
+    transition: 1s all;
+  }
+  .wrap.open {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+    transform: translateY(0);
   }
   .entry {
     width: 95%;
@@ -575,26 +597,25 @@ nav a p:before {
   .open-menu {
     display: inline-block;
   }
-  nav.small {
+  nav {
+    display: none;
+  }
+  nav.mobile {
+    display: block;
     position: relative;
     overflow: hidden;
-    height: 0;
-    -webkit-transition: .6s all;
-    -moz-transition: .6s all;
-    -o-transition: .6s all;
-    transition: .6s all;
+    width: 100%;
+    top: 0;
+    left: 0;
   }
-  nav.small.open {
-    height: 184px;
-  }
-  nav.small a {
+  nav.mobile a {
     width: 100%;
     height: 46px;
     border-radius: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     background-image: none;
   }
-  nav.small a p {
+  nav.mobile a p {
     opacity: 1;
     display: inline-block;
     position: relative;
@@ -603,7 +624,7 @@ nav a p:before {
     box-shadow: none;
     background: none;
   }
-  nav.small a p:before {
+  nav.mobile a p:before {
     display: none;
   }
   .home h2 {
