tweaks to menu for mobile

--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -412,19 +412,16 @@ nav {
 		background-color: inherit;
 		-webkit-transform: translateY(-184px);
 		-moz-transform: translateY(-184px);
-		-ms-transform: translateY(-184px);
 		-o-transform: translateY(-184px);
 		transform: translateY(-184px);
-		-webkit-transition: 1s all;
-		-moz-transition: 1s all;
-		-ms-transition: 1s all;
-		-o-transition: 1s all;
-		transition: 1s all;
+		-webkit-transition: .6s -webkit-transform .1s;
+		-moz-transition: .6s -moz-transform .1s;
+		-o-transition: .6s -o-transform .1s;
+		transition: .6s transform .1s;
 
 		&.open {
 			-webkit-transform: translateY(0);
 			-moz-transform: translateY(0);
-			-ms-transform: translateY(0);
 			-o-transform: translateY(0);
 			transform: translateY(0);
 		}
@@ -434,6 +431,7 @@ nav {
 		height: 72px;
 		margin-right: 0;
 		margin-bottom: 10px;
+		h2 { padding-top: 3px; }
 		.info {
 			padding-top: 20px;
 		}
@@ -445,7 +443,7 @@ nav {
 	.content { padding: 1.5em 0; }
 	
 	.open-menu { display: inline-block; }
-	nav { display: none; }
+	nav.small { display: none; }
 	nav.mobile {
 		display: block;
 		position: relative;
