--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -540,6 +540,18 @@ nav.mobile {
   }
 }
 @media (max-width: 640px) {
+  body {
+    -webkit-transition: 0.6s -webkit-transform 0.1s;
+    -moz-transition: 0.6s -moz-transform 0.1s;
+    -o-transition: 0.6s -o-transform 0.1s;
+    transition: .6s transform .1s;
+  }
+  body.open {
+    -webkit-transform: translateX(50%);
+    -moz-transform: translateX(50%);
+    -o-transform: translateX(50%);
+    transform: translateX(50%);
+  }
   header {
     background-size: 100% 100%;
   }
@@ -557,21 +569,6 @@ nav.mobile {
   }
   .wrap {
     width: 100%;
-    background-color: inherit;
-    -webkit-transform: translateY(-184px);
-    -moz-transform: translateY(-184px);
-    -o-transform: translateY(-184px);
-    transform: translateY(-184px);
-    -webkit-transition: 0.6s -webkit-transform 0.1s;
-    -moz-transition: 0.6s -moz-transform 0.1s;
-    -o-transition: 0.6s -o-transform 0.1s;
-    transition: .6s transform .1s;
-  }
-  .wrap.open {
-    -webkit-transform: translateY(0);
-    -moz-transform: translateY(0);
-    -o-transform: translateY(0);
-    transform: translateY(0);
   }
   .entry {
     width: 95%;
@@ -598,24 +595,22 @@ nav.mobile {
     display: inline-block;
   }
   nav.small {
-    display: none;
-  }
-  nav.mobile {
+    -webkit-transform: translateZ(0);
     display: block;
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    top: 0;
-    left: 0;
+    position: fixed;
+    width: 50%;
+    height: 100%;
+    left: 0%;
+    top: 0px;
   }
-  nav.mobile a {
+  nav.small a {
     width: 100%;
     height: 46px;
     border-radius: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     background-image: none;
   }
-  nav.mobile a p {
+  nav.small a p {
     opacity: 1;
     display: inline-block;
     position: relative;
@@ -624,7 +619,7 @@ nav.mobile {
     box-shadow: none;
     background: none;
   }
-  nav.mobile a p:before {
+  nav.small a p:before {
     display: none;
   }
   .home h2 {
