--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -135,12 +135,13 @@ nav {
 
 .open-menu {
 	display: none;
+	width: 50px;
+	height: 50px;
 	position: absolute;
 	background-color: #05667b;
 	border-radius: 0 0 3px 3px;
+	box-shadow: inset 0 4px 1px rgba(0,0,0,.2);
 	margin-left: 2%;
-	width: 50px;
-	height: 50px;
 	line-height: 50px;
 	color: white;
 	text-align: center;
@@ -396,19 +397,7 @@ nav {
 }
 
 @media (max-width: 640px) {
-	body {
-		&.open {
-			-webkit-transform: translateX(50%);
-			-moz-transform: translateX(50%);
-			-o-transform: translateX(50%);
-			transform: translateX(50%);
-		}
-		-webkit-transition: .6s -webkit-transform .1s;
-		-moz-transition: .6s -moz-transform .1s;
-		-o-transition: .6s -o-transform .1s;
-		transition: .6s transform .1s;
-	}
-	header { background-size: 100% 100%; }
+	header { background-size: 100% 100%; z-index: 2; }
 	h1 { font-size: 3.5em; }
 	h2 {
 		font-size: 2.5em;
@@ -421,7 +410,22 @@ nav {
 	}
 	.wrap {
 		width: 100%;
+		background-color: inherit;
+		-webkit-transform: translateY(-200px);
+		-moz-transform: translateY(-200px);
+		-o-transform: translateY(-200px);
+		transform: translateY(-200px);
+		-webkit-transition: .6s -webkit-transform .05s;
+		-moz-transition: .6s -moz-transform .05s;
+		-o-transition: .6s -o-transform .05s;
+		transition: .6s transform .05s;
 
+		&.open {
+			-webkit-transform: translateY(0);
+			-moz-transform: translateY(0);
+			-o-transform: translateY(0);
+			transform: translateY(0);
+		}
 	}
 	.entry {
 		width: 95%;
@@ -440,19 +444,22 @@ nav {
 	.content { padding: 1.5em 0; }
 	
 	.open-menu { display: inline-block; }
-	// nav.small { display: none; }
+
 	nav.small {
-		-webkit-transform: translateZ(0);
 		display: block;
-		position: fixed;
-		width: 50%;
-		height: 100%;
-		left: 0%;
-		top: 0px;
+		position: relative;
+		overflow: hidden;
+		width: 100%;
+		height: 200px;
+
+		top: 0;
+		left: 0;
+	
 		
 		a {
 			width: 100%;
-			height: 46px;
+			height: 50px;
+			line-height: 46px;
 			border-radius: 0;
 			border-bottom: 1px solid rgba(0,0,0, 0.2);
 			background-image: none;
