--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -240,12 +240,13 @@ nav.mobile {
 }
 .open-menu {
   display: none;
+  width: 50px;
+  height: 50px;
   position: absolute;
   background-color: #05667b;
   border-radius: 0 0 3px 3px;
+  box-shadow: inset 0 4px 1px rgba(0, 0, 0, 0.2);
   margin-left: 2%;
-  width: 50px;
-  height: 50px;
   line-height: 50px;
   color: white;
   text-align: center;
@@ -540,20 +541,9 @@ nav.mobile {
   }
 }
 @media (max-width: 640px) {
-  body {
-    -webkit-transition: 0.6s -webkit-transform 0.1s;
-    -moz-transition: 0.6s -moz-transform 0.1s;
-    -o-transition: 0.6s -o-transform 0.1s;
-    transition: .6s transform .1s;
-  }
-  body.open {
-    -webkit-transform: translateX(50%);
-    -moz-transform: translateX(50%);
-    -o-transform: translateX(50%);
-    transform: translateX(50%);
-  }
   header {
     background-size: 100% 100%;
+    z-index: 2;
   }
   h1 {
     font-size: 3.5em;
@@ -569,6 +559,21 @@ nav.mobile {
   }
   .wrap {
     width: 100%;
+    background-color: inherit;
+    -webkit-transform: translateY(-200px);
+    -moz-transform: translateY(-200px);
+    -o-transform: translateY(-200px);
+    transform: translateY(-200px);
+    -webkit-transition: 0.6s -webkit-transform 0.05s;
+    -moz-transition: 0.6s -moz-transform 0.05s;
+    -o-transition: 0.6s -o-transform 0.05s;
+    transition: .6s transform .05s;
+  }
+  .wrap.open {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -o-transform: translateY(0);
+    transform: translateY(0);
   }
   .entry {
     width: 95%;
@@ -595,17 +600,18 @@ nav.mobile {
     display: inline-block;
   }
   nav.small {
-    -webkit-transform: translateZ(0);
     display: block;
-    position: fixed;
-    width: 50%;
-    height: 100%;
-    left: 0%;
-    top: 0px;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 200px;
+    top: 0;
+    left: 0;
   }
   nav.small a {
     width: 100%;
-    height: 46px;
+    height: 50px;
+    line-height: 46px;
     border-radius: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     background-image: none;
