adjusting some styles

--- a/public/assets/css/less/main.less
+++ b/public/assets/css/less/main.less
@@ -54,10 +54,10 @@ header {
 	overflow: hidden;
 	h1 {
 		position: absolute;
-		text-transform: uppercase;
 		bottom: 10px;
 		left: 0;
 		right: 0;
+		text-transform: uppercase;
 		text-shadow: 0 0 10px #071158;
 	}
 }
@@ -312,7 +312,6 @@ nav {
 		a {
 			display: block;
 			margin-bottom: 14px;
-			margin-right: 0;
 			padding: 0 0 0 25px;
 			text-align: left; 
 			overflow: hidden;
@@ -338,7 +337,7 @@ nav {
 	}
 }
 
-.lab {
+.experiments {
 	background-color: white;
 	header {
 		border-bottom-color: #c0237c;
@@ -354,9 +353,10 @@ nav {
 	}
 }
 
-.color-1 { background-color: rgba(7, 94, 144, 0.9) }
-.color-2 { background-color: rgba(12, 7, 75, 0.8) }
-.color-3 { background-color: rgba(15, 88, 82, 0.8) }
+.color-1 { background-color: rgba(11, 73, 121, 0.8); }
+.color-2 { background-color: rgba(7, 94, 144, 0.9) }
+.color-3 { background-color: rgba(12, 7, 75, 0.8) }
+.color-4 { background-color: rgba(15, 88, 82, 0.8) }
 
 @media (max-width: 987px) {
 	body { font-size: 14px; }
@@ -499,4 +499,3 @@ nav {
 		.content { width: 100%; }
 	}
 }
-
