--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -167,10 +167,10 @@ header {
 }
 header h1 {
   position: absolute;
-  text-transform: uppercase;
   bottom: 10px;
   left: 0;
   right: 0;
+  text-transform: uppercase;
   text-shadow: 0 0 10px #071158;
 }
 nav {
@@ -451,7 +451,6 @@ nav.mobile {
 .home nav a {
   display: block;
   margin-bottom: 14px;
-  margin-right: 0;
   padding: 0 0 0 25px;
   text-align: left;
   overflow: hidden;
@@ -471,28 +470,31 @@ nav.mobile {
 .portfolio .wrap {
   max-width: 908px;
 }
-.lab {
+.experiments {
   background-color: white;
 }
-.lab header {
+.experiments header {
   border-bottom-color: #c0237c;
 }
-.lab h1 {
+.experiments h1 {
   font-weight: 900;
 }
-.lab h2 {
+.experiments h2 {
   color: #605474;
 }
-.lab h2 i {
+.experiments h2 i {
   color: #c0237c;
 }
 .color-1 {
-  background-color: rgba(7, 94, 144, 0.9);
+  background-color: rgba(11, 73, 121, 0.8);
 }
 .color-2 {
-  background-color: rgba(12, 7, 75, 0.8);
+  background-color: rgba(7, 94, 144, 0.9);
 }
 .color-3 {
+  background-color: rgba(12, 7, 75, 0.8);
+}
+.color-4 {
   background-color: rgba(15, 88, 82, 0.8);
 }
 @media (max-width: 987px) {
