--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype 5
 html(lang='en')
 	head
 		meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0')
+		link(rel='icon', type='image/png', href='/assets/img/favicon.png')
 		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Pacifico%7CRaleway:900,500')
 		link(rel='stylesheet', href='/assets/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/assets/css/main.css')
