Added more info to package and additional dependencies.

--- a/views/includes/footer.jade
+++ b/views/includes/footer.jade
@@ -6,6 +6,4 @@ script.
 
 		ga('create', 'UA-43034937-1', 'freehill.me');
 		ga('send', 'pageview');
-script(src='/assets/js/lib/zepto.min.js')
-script(src='/assets/js/doT.min.js')
-script(src='/assets/js/behavior.js')
+script(src='/assets/js/require.js', data-main='/assets/js/main')
