removed extraneous styles from bootstrap css

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -224,6 +224,7 @@ nav a p {
   font-weight: 700;
   padding: 5px 10px;
   border-radius: 0 3px 3px 3px;
+  margin: 0 0 12px;
   display: none;
   transition: all 0.5s;
   box-shadow: 0 2px 1px rgba(0, 0, 0, 0.1);
