--- a/views/portfolio.jade
+++ b/views/portfolio.jade
@@ -17,8 +17,9 @@ block content
 							img(src='/assets/img/thumbs/#{entry.thumb}')
 							section.info-button
 								i.icon-cancel
-							a(href='#{entry.link}', target='_new')
-								i.icon-link-2
+							if entry.link
+								a(href='#{entry.link}', target='_new')
+									i.icon-link-2
 							section.info
 								h1.client #{entry.client}
 								h2.project #{entry.project}
