Pass page data in JS object.

--- a/views/includes/footer.jade
+++ b/views/includes/footer.jade
@@ -6,4 +6,6 @@ script.
 
 		ga('create', 'UA-43034937-1', 'freehill.me');
 		ga('send', 'pageview');
+script.
+	var appData = { currentPage: "#{slug}" }
 script(src='/assets/js/require.js', data-main='/assets/js/main')
