--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -495,6 +495,14 @@ nav.mobile {
 .color-2 {
   background-color: rgba(15, 88, 82, 0.8);
 }
+h1,
+h2,
+p {
+  opacity: 0;
+}
+a {
+  color: rgba(255, 255, 255, 0);
+}
 .wf-loading h1,
 .wf-loading h2,
 .wf-loading p {
@@ -508,10 +516,14 @@ nav.mobile {
 .wf-active p {
   opacity: 1;
   -webkit-transition: opacity 0.25s;
+  -moz-transition: opacity 0.25s;
+  transition: opacity 0.25s;
 }
 .wf-active a {
   color: #ffffff;
   -webkit-transition: color 0.25s;
+  -moz-transition: color 0.25s;
+  transition: color 0.25s;
 }
 @media (max-width: 987px) {
   body {
