Moved app data JSON to app.locals.
It only reads the file when it first starts up, so that the server
isn't reading the file every time it renders a page.

--- a/views/portfolio.jade
+++ b/views/portfolio.jade
@@ -11,8 +11,8 @@ block content
 		section.content
 			section.entries
 				//- only display entries if data is passed
-				if data
-					each entry in data.entries
+				if appData
+					each entry in appData.entries
 						li(class="entry")
 							img(src='/assets/img/thumbs/#{entry.thumb}')
 							section.info-button
